# Whatsapp-Bot

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: settings.py
app/db/: session.py
app/interfaces/: ai_provider.py  data_source.py  messaging_provider.py
app/models/: __init__.py  advisor.py  agent.py  business.py  conversation.py  item.py  message.py  plan.py  request.py  usage.py  user.py
app/providers/ai/: azure_ai.py  mock_ai.py
app/providers/data_sources/: __init__.py  mock_data.py  sql_data.py
app/schemas/: test_message.py
app/services/: bot_service.py  conversation_manager.py  conversation_memory.py  flow_manager.py  human_support_service.py  intent_engine.py  message_router.py  retrieval.py  runtime_ai_context.py  runtime_business_profile.py  runtime_factory.py
app/utils/: whatsapp_formatting.py
migrations/: env.py
migrations/versions/: 06b0076550c6_update_human_consistency_constraints.py  0930cb0695fa_initial_schema.py  235b38bfbb57_simplified_flow.py  4f31d0bce6a1_add_assigned_advisor_and_close_command_support.py  8b0c3e8bd5b7_add_advisors_table.py  b44a4f95a9e7_add_human_status_to_conversations.py  d2f6f88ac0df_minimal_control_mode_mvp.py
tests/: test_azure_ai_provider.py  test_conversation_memory.py  test_flow_manager_profile.py  test_message_router.py  test_runtime_ai_context.py  test_runtime_business_profile.py  test_sql_data_retrieval.py
whatsapp_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+5 files in other folders)
