[project]
name = "whatsapp-bot"
version = "0.1.0"
description = "AI-powered WhatsApp Bot for SMEs"
authors = [
    { name = "Tomás Garbellotto" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "openai>=2.0.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*"]

[tool.uvicorn]
app = "app.main:app"
reload = true
host = "127.0.0.1"
port = 8000